<resources>
    <string name="app_name">Poetress</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="logInWithAnother">Войти с помощью:</string>
    <string name="registration">Регистрация</string>
    <string name="In">Вход</string>
    <string name="sign_in">Войти</string>
    <string name="repeat_pass">Повторите пароль</string>
    <string name="test_profile_name">Михаил Беляев, 18</string>
    <string name="maaykovsky">Я волком бы
    выгрыз
    бюрократизм.
    К мандатам
    почтения нету.
    К любым
    чертям с матерями
    катись
    любая бумажка.
    Но эту…
    По длинному фронту
    купе
    и кают
    чиновник
    учтивый движется.
    Сдают паспорта,
    и я
    сдаю
    мою
    пурпурную книжицу.
    К одним паспортам —
    улыбка у рта.
    К другим —
    отношение плевое.
    С почтеньем
    берут, например,
    паспорта
    с двухспальным
    английским левою.
    Глазами
    доброго дядю выев,
    не переставая
    кланяться,
    берут,
    как будто берут чаевые,
    паспорт
    американца.
    На польский —
    глядят,
    как в афишу коза.
    На польский —
    выпяливают глаза
    в тугой
    полицейской слоновости —
    откуда, мол,
    и что это за
    географические новости?
    И не повернув
    головы кочан
    и чувств
    никаких
    не изведав,
    берут,
    не моргнув,
    паспорта датчан
    и разных
    прочих
    шведов.
    И вдруг,
    как будто
    ожогом,
    рот
    скривило
    господину.
    Это
    господин чиновник
    берет
    мою
    краснокожую паспортину.
    Берет —
    как бомбу,
    берет —
    как ежа,
    как бритву
    обоюдоострую,
    берет,
    как гремучую
    в 20 жал
    змею
    двухметроворостую.
    Моргнул
    многозначаще
    глаз носильщика,
    хоть вещи
    снесет задаром вам.
    Жандарм
    вопросительно
    смотрит на сыщика,
    сыщик
    на жандарма.
    С каким наслажденьем
    жандармской кастой
    я был бы
    исхлестан и распят
    за то,
    что в руках у меня
    молоткастый,
    серпастый
    советский паспорт.
    Я волком бы
    выгрыз
    бюрократизм.
    К мандатам
    почтения нету.
    К любым
    чертям с матерями
    катись
    любая бумажка.
    Но  эту…
    Я
    достаю
    из широких штанин
    дубликатом
    бесценного груза.
    Читайте,
    завидуйте,
    я —
    гражданин
        Советского Союза.</string>
</resources>
